postgres.c3


/* Quoting strings before inclusion in queries. */
extern fn size_t PQescapeStringConn(PGconn *conn, char *to, char *from, size_t length, int *error) @extern("PQescapeStringConn");
extern fn char *PQescapeLiteral(PGconn *conn, char *str, size_t len) @extern("PQescapeLiteral");
extern fn char *PQescapeIdentifier(PGconn *conn, char *str, size_t len) @extern("PQescapeIdentifier");
extern fn unsigned *PQescapeByteaConnchar (PGconn *conn, unsigned char *from, size_t from_length, size_t *to_length) @extern("char ");
extern fn unsigned *PQunescapeByteachar (unsigned char *strtext, size_t *retbuflen) @extern("char ");

/* These forms are deprecated! */
extern fn size_t PQescapeString(char *to, char *from, size_t length) @extern("PQescapeString");
extern fn unsigned *PQescapeByteachar (unsigned char *from, size_t from_length, size_t *to_length) @extern("char ");



/* === in fe-print.c === */

extern fn void PQprint(FILE *fout, /* output stream */ PGresult *res, PQprintOpt *po) @extern("PQprint");

/*
 * really old printing routines
 */
extern fn void PQdisplayTuples(PGresult *res, FILE *fp,	/* where to send the output */ int fillAlign,	/* pad the fields with spaces */ char *fieldSep,	/* field separator */ int printHeader,	/* display headers? */ int quiet) @extern("PQdisplayTuples");

extern fn void PQprintTuples(PGresult *res, FILE *fout,	/* output stream */ int PrintAttNames,	/* print attribute names */ int TerseOutput,	/* delimiter bars */ int colWidth) @extern("PQprintTuples");


/* === in fe-lobj.c === */

/* Large-object access routines */
extern fn int	lo_open(PGconn *conn, Oid lobjId, int mode) @extern("lo_open");
extern fn int	lo_close(PGconn *conn, int fd) @extern("lo_close");
extern fn int	lo_read(PGconn *conn, int fd, char *buf, size_t len) @extern("lo_read");
extern fn int	lo_write(PGconn *conn, int fd, char *buf, size_t len) @extern("lo_write");
extern fn int	lo_lseek(PGconn *conn, int fd, int offset, int whence) @extern("lo_lseek");
extern fn pg_int64 lo_lseek64(PGconn *conn, int fd, pg_int64 offset, int whence) @extern("lo_lseek64");
extern fn Oid	lo_creat(PGconn *conn, int mode) @extern("lo_creat");
extern fn Oid	lo_create(PGconn *conn, Oid lobjId) @extern("lo_create");
extern fn int	lo_tell(PGconn *conn, int fd) @extern("lo_tell");
extern fn pg_int64 lo_tell64(PGconn *conn, int fd) @extern("lo_tell64");
extern fn int	lo_truncate(PGconn *conn, int fd, size_t len) @extern("lo_truncate");
extern fn int	lo_truncate64(PGconn *conn, int fd, pg_int64 len) @extern("lo_truncate64");
extern fn int	lo_unlink(PGconn *conn, Oid lobjId) @extern("lo_unlink");
extern fn Oid	lo_import(PGconn *conn, char *filename) @extern("lo_import");
extern fn Oid	lo_import_with_oid(PGconn *conn, char *filename, Oid lobjId) @extern("lo_import_with_oid");
extern fn int	lo_export(PGconn *conn, Oid lobjId, char *filename) @extern("lo_export");

/* === in fe-misc.c === */

/* Get the version of the libpq library in use */
extern fn int	PQlibVersion(void) @extern("PQlibVersion");

/* Determine length of multibyte encoded char at *s */
extern fn int	PQmblen(char *s, int encoding) @extern("PQmblen");

/* Same, but not more than the distance to the end of string s */
extern fn int	PQmblenBounded(char *s, int encoding) @extern("PQmblenBounded");

/* Determine display length of multibyte encoded char at *s */
extern fn int	PQdsplen(char *s, int encoding) @extern("PQdsplen");

/* Get encoding id from environment variable PGCLIENTENCODING */
extern fn int	PQenv2encoding(void) @extern("PQenv2encoding");

/* === in fe-auth.c === */

extern fn char *PQencryptPassword(char *passwd, char *user) @extern("PQencryptPassword");
extern fn char *PQencryptPasswordConn(PGconn *conn, char *passwd, char *user, char *algorithm) @extern("PQencryptPasswordConn");

/* === in encnames.c === */

extern fn int	pg_char_to_encoding(char *name) @extern("pg_char_to_encoding");
extern fn char *pg_encoding_to_char(int encoding) @extern("pg_encoding_to_char");
extern fn int	pg_valid_server_encoding_id(int encoding) @extern("pg_valid_server_encoding_id");

/* === in fe-secure-openssl.c === */

/* Support for overriding sslpassword handling with a callback */
def PQsslKeyPassHook_OpenSSL_type = fn int (char *buf, int size, PGconn *conn);
extern fn PQsslKeyPassHook_OpenSSL_type PQgetSSLKeyPassHook_OpenSSL(void) @extern("PQgetSSLKeyPassHook_OpenSSL");
extern fn void PQsetSSLKeyPassHook_OpenSSL(PQsslKeyPassHook_OpenSSL_type hook) @extern("PQsetSSLKeyPassHook_OpenSSL");
extern fn int PQdefaultSSLKeyPassHook_OpenSSL(char *buf, int size, PGconn *conn) @extern("PQdefaultSSLKeyPassHook_OpenSSL");
